[metadata]
version = 0.3.19

[pycodestyle]
max_line_length = 88

[isort]
ensure_newline_before_comments = True
line_length = 88
force_single_line = True
group_by_package = True
skip =
    .git/
    benchmark/
    build/
    dist/
    misc/
    python-libs/
    thirdparty/
    modules/graph/thirdparty/
    modules/io/build/
known_airflow = airflow
known_pandas = numpy,pandas,pyarrow
known_dask = dask
known_ray = ray
known_vineyard = vineyard
sections = FUTURE,STDLIB,PANDAS,AIRFLOW,DASK,RAY,THIRDPARTY,VINEYARD,FIRSTPARTY,LOCALFOLDER

[flake8]
max-line-length = 88
max-complexity = 18
# for flake8-quotes
inline-quotes = single
# for flake8-comprehensions
extend-ignore = E203,F401,F401,F403,C4,Q000,Q001,Q002
extend-exclude =
    .git/
    benchmark/
    build/
    dist/
    misc/
    python-libs/
    thirdparty/
    modules/graph/thirdparty/
    modules/io/build/
per-file-ignores =
    python/vineyard/core/codegen/cpp.py:E501
    python/vineyard/__init__.py:E402

[build_sphinx]
source-dir = docs
build-dir  = docs/_build
all_files  = 1
fresh-env  = 1

[upload_docs]
upload-dir = docs/_build/html
